--- a/src/main/resources/static/webapp/html/index.html
+++ b/src/main/resources/static/webapp/html/index.html
@@ -91,7 +91,7 @@
             <input type="email" name="email" id="" placeholder="" /><br />
 
             <label for="phone">Phone</label><br />
-            <input type="tel" name="phone" id="phone" placeholder="+61" /><br />
+            <input type="tel" name="phone" id="phone" placeholder="" /><br />
 
             <label>Please tell us how we can help</label>
             <br />
