Edit Form fields

--- a/src/main/resources/static/webapp/html/index.html
+++ b/src/main/resources/static/webapp/html/index.html
@@ -55,7 +55,7 @@
 
         <div class="skill-line">&bull; knowledge of standards commercial painting procedures </div>
 
-        <div class="skill-line">&bull; Demonstrates ability to read, write and follow instructions </div>
+        <div class="skill-line">&bull;  Demonstrates ability to read, write and follow instructions </div>
 
         <div class="skill-line"> &bull; Well aware of state approved safety policies and procedures
             regarding commercial painting </div>
@@ -83,24 +83,23 @@
         <form action="registerUser" th:action="@{/registerUser}"  th:object="${saveUser}" method="POST">
             <br />
             <label>Your Name:</label><br />
-            <input type="text" th:field="*{name}"  placeholder="" /><br />
+            <input type="text" th:field="*{name}"  placeholder="" /><label th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error Name</label><br>
+
 
             <label >Your Suburb</label><br />
-            <input type="text"  th:field="*{suburb}"  placeholder="" /><br />
+            <input type="text"  th:field="*{suburb}"  placeholder="" /><label th:if="${#fields.hasErrors('suburb')}" th:errors="*{name}">Error Suburb</label><br />
 
-            <label >Email</label><br />
-            <input type="email" th:field="*{email}"  placeholder="" /><br />
+            <label>Email</label><br/>
+            <input type="email" th:field="*{email}"  placeholder="" /><label th:if="${#fields.hasErrors('email')} th:errors="*{email}> </label><br />
 
-            <label >Phone</label><br />
-            <input type="tel" th:field="*{phone}" placeholder="" /><br />
+            <label>Phone</label><br/>
+            <input type="tel" th:field="*{phone}" placeholder="" /> <label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></label><br />
 
-            <label>Please tell us how we can help</label>
-            <br />
-            <textarea type="text" th:field="*{text}" rows="10" cols="40"></textarea
-            ><br />
+
+            <label>Please tell us how we can help</label><br />
+            <textarea type="text" th:field="*{text}" rows="10" cols="40"></textarea><br />
             <div>
-                <input class="submit" type="submit" value="Submit"  />
-                <br /><br />
+                <input class="submit" type="submit" value="Submit"  /><br/><br/>
             </div>
         </form>
     </div>
@@ -109,10 +108,10 @@
 
 <div class="footer">
 <!--    Facebook-->
-    <a class="fa fa-facebook" style="color:rgb(241, 243, 239);" href="https://www.facebook.com/M&Z.painting.au/" target="_blank"></a>
+    <a class="fa fa-facebook" style="color:rgb(241, 243, 239);" href="https://www.facebook.com/m.z.painting.au/" target="_blank"></a>
 <!--    Email-->
-    <a href="mailto:mz_painting@yahoo.com" class="email"> mz_painting@yahoo.com</a>
-    <img src="/webapp/images/fBlue.png" alt="facebook" width="20px" />
+    <a href="mailto:mz_painting@yahoo.com" class="email">mz_painting@yahoo.com</a>
+    <img src="/webapp/images/fBlue.png" alt="facebook" width="auto" />
     </a>
 
     <p>&COPY;M&Z 2022</p>
