--- a/src/main/resources/static/webapp/html/service.html
+++ b/src/main/resources/static/webapp/html/service.html
@@ -73,6 +73,11 @@
         finished, Spray tiles and Any spray job
     </p>
 </div>
+
+<title>Getting Started: Handling Form Submission</title>
+
+
+
 <br /><br />
 
 
