--- a/src/main/resources/static/webapp/html/index.html
+++ b/src/main/resources/static/webapp/html/index.html
@@ -83,18 +83,17 @@
         <form action="registerUser" th:action="@{/registerUser}"  th:object="${saveUser}" method="POST">
             <br />
             <label>Your Name:</label><br />
-            <input type="text" th:field="*{name}"  placeholder="" /><label th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error Name</label><br>
+            <input type="text" th:field="*{name}"  placeholder="" /><br>
 
 
             <label >Your Suburb</label><br />
-            <input type="text"  th:field="*{suburb}"  placeholder="" /><label th:if="${#fields.hasErrors('suburb')}" th:errors="*{name}">Error Suburb</label><br />
+            <input type="text"  th:field="*{suburb}"  placeholder="" /><br />
 
             <label>Email</label><br/>
-            <input type="email" th:field="*{email}"  placeholder="" /><label th:if="${#fields.hasErrors('email')} th:errors="*{email}> </label><br />
+            <input type="email" th:field="*{email}"  placeholder="" /><br />
 
             <label>Phone</label><br/>
-            <input type="tel" th:field="*{phone}" placeholder="" /> <label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></label><br />
-
+            <input type="tel" th:field="*{phone}" placeholder="" /><br />
 
             <label>Please tell us how we can help</label><br />
             <textarea type="text" th:field="*{text}" rows="10" cols="40"></textarea><br />
