--- a/src/main/resources/webapp/WEB-INF/html/index.html
+++ b/src/main/resources/webapp/WEB-INF/html/index.html
@@ -83,7 +83,7 @@
         <form action="registerUser" th:action="@{/registerUser}"  th:object="${user}" method="POST">
             <br />
             <label>Your Name:</label><br />
-            <input type="text" th:field="*{name}"  placeholder="" /><br>
+            <input type="text" th:field="*{name}"  placeholder="" /><br/>
 
 
             <label >Your Suburb</label><br />
@@ -107,9 +107,9 @@
 
 <div class="footer">
 <!--    Facebook-->
-    <a class="fa fa-facebook" style="color:rgb(241, 243, 239);" th:href="https://www.facebook.com/m.z.painting.au/" target="_blank"></a>
+    <a class="fa fa-facebook" style="color:rgb(241, 243, 239);" href="https://www.facebook.com/m.z.painting.au/" target="_blank"></a>
 <!--    Email-->
-    <a th:href="mailto:mz_painting@yahoo.com" class="email">mz_painting@yahoo.com</a>
+    <a href="mailto:mz_painting@yahoo.com" class="email">mz_painting@yahoo.com</a>
     <img src="/webapp/images/fBlue.png" alt="facebook" width="auto" />
     </a>
 
