Added Message Validations

--- a/src/main/resources/webapp/WEB-INF/html/index.html
+++ b/src/main/resources/webapp/WEB-INF/html/index.html
@@ -83,17 +83,21 @@
         <form action="registerUser" th:action="@{/registerUser}"  th:object="${user}" method="POST">
             <br />
             <label>Your Name:</label><br />
-            <input type="text" th:field="*{name}"  placeholder="" /><br/>
+            <input type="text" th:field="*{name}"  placeholder="" />
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p><br/>
 
 
             <label >Your Suburb</label><br />
-            <input type="text"  th:field="*{suburb}"  placeholder="" /><br />
+            <input type="text"  th:field="*{suburb}"  placeholder="" />
+            <p th:if="${#fields.hasErrors('suburb')}" th:errors="*{suburb}"></p><br />
 
             <label>Email</label><br/>
-            <input type="email" th:field="*{email}"  placeholder="" /><br />
+            <input type="email" th:field="*{email}"  placeholder="" />
+            <p th:if="${#fields.hasErrors('email')}" th:errors="*{suburb}"></p><br />
 
             <label>Phone</label><br/>
-            <input type="tel" th:field="*{phone}" placeholder="" /><br />
+            <input type="tel" th:field="*{phone}" placeholder="" />
+           <!-- <label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></label>--><br />
 
             <label>Please tell us how we can help</label><br />
             <textarea type="text" th:field="*{text}" rows="10" cols="40"></textarea><br />
