--- a/src/main/resources/static/webapp/WEB-INF/html/about.html
+++ b/src/main/resources/static/webapp/WEB-INF/html/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
 
-    <link href="/webapp/css/about.css" th:href="@{/webapp/css/about.css}" rel="stylesheet"/>
+    <link href="/css/about.css" th:href="@{/css/about.css}" rel="stylesheet"/>
 </head>
 
 
