--- a/src/main/resources/static/webapp/WEB-INF/html/service.html
+++ b/src/main/resources/static/webapp/WEB-INF/html/service.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Services</title>
 
-    <link href="/webapp/css/service.css" th:href="@{/webapp/css/service.css}" rel="stylesheet"/>
+    <link href="/css/service.css" th:href="@{/css/service.css}" rel="stylesheet"/>
 
 </head>
 <body>
@@ -25,6 +25,9 @@
     </div>
 </div>
 <br /><br><br><br>
+
+<h1>Hi</h1>
+<p th:text="${user}"></p>
 
 
 <h3>Professional Experience</h3>
