--- a/src/main/resources/static/webapp/WEB-INF/html/contact.html
+++ b/src/main/resources/static/webapp/WEB-INF/html/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us</title>
 
-    <link href="/webapp/css/contact.css" th:href="@{/webapp/css/contact.css}" rel="stylesheet"/>
+    <link href="/css/contact.css" th:href="@{/css/contact.css}" rel="stylesheet"/>
 </head>
 
 
