--- a/src/main/resources/static/webapp/WEB-INF/html/service.html
+++ b/src/main/resources/static/webapp/WEB-INF/html/service.html
@@ -26,8 +26,7 @@
 </div>
 <br /><br><br><br>
 
-<h1>Hi</h1>
-<p th:text="${user}"></p>
+<h1 th:text="${registerSuccess}">Message: </h1>
 
 
 <h3>Professional Experience</h3>
