--- a/src/main/resources/static/webapp/WEB-INF/html/index.html
+++ b/src/main/resources/static/webapp/WEB-INF/html/index.html
@@ -115,12 +115,12 @@
 <!-- Footer  -->
 
 <div class="footer">
-<!--    Facebook-->
-    <a class="fa fa-facebook" style="color:rgb(241, 243, 239);" href="https://www.facebook.com/m.z.painting.au/" target="_blank"></a>
-<!--    Email-->
+    <!--    Facebook-->
+    <a img src="/webapp/images/fBlue.png" alt="facebook" width="60px" height="70px"
+       class="fa fa-facebook" href="mzFacebook" target="_blank"></a>
+    <!--    Email-->
     <a href="mailto:mz_painting@yahoo.com" class="email">mz_painting@yahoo.com</a>
-    <img src="/webapp/images/fBlue.png" alt="facebook" width="60px" height="70px" />
-    </a>
+    <!--    <img src="/webapp/images/fBlue.png" alt="facebook" width="60px" height="70px" />-->
 
     <p>&COPY;M&Z 2022</p>
 </div>
